solution map  元素类型

--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -272,7 +272,7 @@
 
               <div class="form-group" >
                 <label for="select_solution_image_btn" class="col-lg-5 control-label"><%=
-                  i('html.label.synthetic.metadata.fontimage') %><!-- 文字画像設定--></label>
+                  i('html.label.synthetic.metadata.subimage') %><!-- 文字画像設定--></label>
 
                 <div class="col-lg-7">
                   <a id="select_solution_image_btn" class="btn btn-default"  style="float: left"><%=
@@ -282,7 +282,7 @@
 
               <div class="form-group" >
                 <label for="solution_image_preview" class="col-lg-5 control-label"><%=
-                  i('html.label.synthetic.metadata.fontimage') %><!-- 文字画像設定--></label>
+                  i('html.button.synthetic.metadata.select') %><!-- 文字画像設定--></label>
 
                 <div class="col-lg-7">
                   <div id="solution_image_preview">
