--- a/public/stylesheets/contents.css
+++ b/public/stylesheets/contents.css
@@ -533,3 +533,58 @@ div:hover > .tools.tools-right {
   width: 100%;
   height: 100%;
 }
+#logo_panel {
+  border: solid 1px #d3d3d3;
+  float: left;
+  height: 500px;
+  width: 300px;
+  margin: 10px 0px 10px 0px;
+  font-size: 12px;
+}
+#logo_panel .title {
+  border-bottom: 1px solid #e5e5e5;
+  height: 35px;
+  background: #f5f5f5;
+}
+#logo_panel .title span {
+  line-height: 35px;
+  padding-left: 10px;
+  font-size: 16px;
+}
+#logo_panel .title .title_btn {
+  margin-top: 2px;
+  margin-right: 2px;
+}
+#logo_panel .widget_body {
+  margin-right: 10px;
+  margin-top: 10px;
+  /*width: 100%;*/
+
+  height: 300px;
+}
+#logo_panel .widget_body form {
+  width: 100%;
+  mix-height: 50px;
+}
+#logo_image_preview img {
+  width: 100px;
+  height: 100px;
+}
+.logo_widget {
+  float: left;
+  height: 100px;
+  width: 100px;
+  background: #f4f4f4;
+  position: absolute;
+}
+.logo_widget_border {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+}
+.logo_widget_border img {
+  width: 100% !important;
+  height: 100% !important;
+}
