--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -243,6 +243,24 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading" style="height: 35px;">
+                    <div style="width: 45px;float: left;"><input type="radio" name="type" value="Introduction" style="margin-top: 0px;"></div>
+                    <div style="width: 200px;float: left;">
+                      <h4 class="panel-title">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" num="5">
+                          事例
+                        </a>
+                      </h4>
+                    </div>
+                  </div>
+                  <div id="collapseSix" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      <img width="300px" src="/images/solutiontype.png">
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
