--- a/public/stylesheets/contents.less
+++ b/public/stylesheets/contents.less
@@ -698,3 +698,9 @@ div:hover>.tools.tools-right {
   width: 100% !important;
   height: 100% !important;
 }
+
+.action_bglogo_preview img{
+  width: 100px;
+  height: 100px;
+
+}
