--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -345,6 +345,19 @@
         </div>
       </div>
 
+      <div class="form-group" id="logo_bg_material">
+        <label class="col-lg-5 control-label">背景图片</label>
+        <div class="col-lg-7">
+          <a id="btnSelectLogoBgMetadata" class="btn btn-default btn-sm" ><%= i('html.button.synthetic.widget.jump') %>
+            <!-- 遷移先--></a>
+
+          <div id="action_bglogo_preview" class="action_bglogo_preview">
+            <img src="/images/logo-block.png"/>
+          </div>
+        </div>
+
+      </div>
+
 
       <div class="form-group">
         <label class="col-lg-5 control-label">分类</label>
