--- a/public/stylesheets/contents.css
+++ b/public/stylesheets/contents.css
@@ -588,3 +588,7 @@ div:hover > .tools.tools-right {
   width: 100% !important;
   height: 100% !important;
 }
+.action_bglogo_preview img {
+  width: 100px;
+  height: 100px;
+}
