--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -250,7 +250,7 @@
                     <div style="width: 200px;float: left;">
                       <h4 class="panel-title">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" num="5">
-                          事例
+                          <%= i('html.label.synthetic.type.Introduction') %><!-- Introduction-->
                         </a>
                       </h4>
                     </div>
