--- a/views/login.html
+++ b/views/login.html
@@ -36,19 +36,19 @@
           <div class="form-group">
             <div class="input-group">
               <span class="input-group-addon"><i class="icon-building"></i></span>
-              <input type="text" class="form-control" placeholder="Company Id" id="path" name="path" value="dreamarts">
+              <input type="text" class="form-control" placeholder="Company Id" id="path" name="path" value="apple">
             </div>
           </div>
           <div class="form-group">
             <div class="input-group">
               <span class="input-group-addon"><i class="icon-envelope"></i></span>
-              <input type="text" class="form-control" placeholder="E-mail" id="name" name="name" value="test01@dreamarts.co.jp">
+              <input type="text" class="form-control" placeholder="E-mail" id="name" name="name" value="apple01@apple.com.cn">
             </div>
           </div>
           <div class="form-group">
             <div class="input-group">
               <span class="input-group-addon "><i class="icon-key"></i></span>
-              <input type="password" class="form-control" placeholder="Password" id="pass" name="pass" value="test01" >
+              <input type="password" class="form-control" placeholder="Password" id="pass" name="pass" value="apple01" >
             </div>
           </div>
           <div class="form-group">
