元素追加新 opts 标识    修改元素一览画面表纸图片

--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -257,7 +257,7 @@
                   </div>
                   <div id="collapseSix" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <img width="300px" src="/images/solutiontype.png">
+                      <img width="300px" src="/images/Introduction.png">
                     </div>
                   </div>
                 </div>
