自定义 solutionmap 的 设定

--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -124,12 +124,12 @@
     </div>
   </div>
 </div>
-<div class="row tableheader col-lg-8">
+<div class="row tableheader col-lg-8" id="solutionDisplay">
   <div class="pull-left">
     <h4><%= i('html.label.synthetic.imageadd') %><!-- スライド定義--></h4>
   </div>
 </div>
-<div class="row col-lg-8" style="border:solid 0px #e3e3e3;border-bottom-width: 0px">
+<div class="row col-lg-8" id="solutionDisplay1" style="border:solid 0px #e3e3e3;border-bottom-width: 0px">
 <div id="main_panel">
   <img id="main_panel_img" src="/images/logo-block.png">
 
@@ -408,7 +408,7 @@
 
 
 </div>
-<div class="row col-lg-8" style="border:solid 0px #e3e3e3;border-top-width:0px">
+<div class="row col-lg-8" id="solutionDisplay3" style="border:solid 0px #e3e3e3;border-top-width:0px">
   <div id="viewport"></div>
 </div>
 <div class="col-lg-8" style="margin-top: 30px">
