--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -175,7 +175,7 @@
     <td>
       <!--<a href="#" class="btn btn-default btn-sm" rowid={{id}} layoutId={{layoutId}} operation="copy">コピー</a>-->
       <a href="#" class="btn btn-default btn-sm {{class3}}" rowid={{id}} operation="preview" imageH = {{preview_image_H}} imageV = {{preview_image_V}} synthetic_id={{tmpSyn}}><%= i('html.button.common.preview') %><!--プレビュー --></a>
-      <a href="#" class="btn btn-default btn-sm" rowid={{id}} layoutId={{layoutId}} operation="repeal"><%= i('html.button.common.discard') %><!--廃止 --></a>
+      <a href="#" class="btn btn-default btn-sm {{class6}}" rowid={{id}} layoutId={{layoutId}} operation="repeal"><%= i('html.button.common.discard') %><!--廃止 --></a>
     </td>
   </tr>
 </script>
