--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="form-group" id="ctr_syntheticSign" style="margin-top: 15px;display: none;">
-      <label for="subTypeZone" class="col-lg-2 control-label">カストマイズ</label>
+      <label for="subTypeZone" class="col-lg-2 control-label"><%= i('html.label.synthetic.label.Conference') %><!-- Conference--></label>
 
       <div class="col-lg-10">
         <div class="btn-group" value="0" id="subTypeZone">
