update the icons of workstation

--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -1022,3 +1022,14 @@ table {
   padding: 0px;
   content: "";
 }
+
+.workstation_icon {
+  width : 25px;
+  height: 25px;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+  border: 1px solid #d3d3d3;
+  font-weight: normal;
+  color: #555555;
+}
