元素部分的 多国语对应

--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -559,8 +559,8 @@
 
 <script type="text/template" id="tmpl_logo_tag_item">
   <tr>
-    <td><input type="text" name="tag" class="form-control text_tag" placeholder="<%=i('html.label.synthetic.type.Introduction.type') %><!-- 分类-->" value="{{tag}}"/></td>
-    <td><input type="text" name="subtag" class="form-control text_tag" placeholder="<%=i('html.label.synthetic.type.Introduction.subtype') %><!-- 子分类-->" value="{{subtag}}"/></td>
+    <td><input type="text" name="tag" class="form-control text_tag" placeholder="<%=i('html.label.synthetic.type.Introduction.type') %>" value="{{tag}}"/></td>
+    <td><input type="text" name="subtag" class="form-control text_tag" placeholder="<%=i('html.label.synthetic.type.Introduction.subtype') %>" value="{{subtag}}"/></td>
     <td><i class="icon-remove" num={{num}}></i></td>
   </tr>
 </script>
