日志查看模块

--- a/views/common/required.html
+++ b/views/common/required.html
@@ -16,6 +16,13 @@
 <script type="text/javascript" src="/vendor/bootstrap/js/bootstrap.js"></script>
 <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css" />
 
+<!-- daterangepicker : A date range picker for Twitter Bootstrap -->
+<script type="text/javascript" src="/vendor/daterangepicker/js/daterangepicker.js"></script>
+<link rel="stylesheet" href="/vendor/daterangepicker/css/daterangepicker-bs3.css" />
+
+<!-- moment :  -->
+<script type="text/javascript" src="/vendor/moment/moment+langs.min.js"></script>
+
 <!-- alertify : browser dialogs never looked so good -->
 <script type="text/javascript" src="/vendor/alertify/alertify.js"></script>
 <link rel="stylesheet" href="/vendor/alertify/themes/alertify.css" />
