--- a/views/common/sidebar.html
+++ b/views/common/sidebar.html
@@ -180,6 +180,11 @@
             <i class="icon-truck"></i>&nbsp;<%= i('html.label.sidebar.company.manager.operated')%> <!--運行情報 -->
           </a>
         </li>
+        <li>
+          <a href="/admin/log" class="dropdown-toggle">
+             <i class="icon-eye-open"></i>&nbsp;<%= i('html.label.sidebar.company.manager.log')%> <!--運行情報 -->
+          </a>
+        </li>
       </ul>
     </li>
     <% }%>
