--- a/views/common/sidebar.html
+++ b/views/common/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar" id="sidebar">
   <ul class="nav nav-list">
-    <% if (user.type == 0) {%>
-      <% if (user.authority && user.authority.contents ==1) {%>
+    <% if (user.extend.type == 0) {%>
+      <% if (user.extend.authority && user.extend.authority.contents ==1) {%>
         <li>
         <a href="#">
           <span class="menu-text"><%= i('html.label.sidebar.content') %></span>
@@ -28,7 +28,7 @@
               <li>
                 <a href="/content/layout/apply"><%= i('html.label.sidebar.content.layout.apply') %></a>
               </li>
-              <% if (user.authority && user.authority.approve ==1) {%>
+              <% if (user.extend.authority && user.extend.authority.approve ==1) {%>
               <li>
                 <a href="/content/layout/confirm"><%= i('html.label.sidebar.content.layout.confirm') %></a>
               </li>
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </li>
-      <% } else if (user.authority && user.authority.approve ==1) {%>
+      <% } else if (user.extend.authority && user.extend.authority.approve ==1) {%>
         <li>
         <a href="#">
           <span class="menu-text"><%= i('html.label.sidebar.content') %></span>
@@ -69,7 +69,7 @@
               <i class="icon-group"></i>&nbsp;<%= i('html.label.sidebar.personal.setup.group') %>
             </a>
           </li>
-          <% if (user.authority && user.authority.notice ==1) {%>
+          <% if (user.extend.authority && user.extend.authority.notice ==1) {%>
           <li>
             <a href="/customer/notice" class="dropdown-toggle">
               <i class="icon-bullhorn"></i>&nbsp;<%= i('html.label.sidebar.personal.setup.notice') %>
@@ -78,7 +78,7 @@
           <% }%>
         </ul>
       </li>
-      <% if (user.authority && user.authority.contents ==1) {%>
+      <% if (user.extend.authority && user.extend.authority.contents ==1) {%>
         <li>
         <a href="#" class="dropdown-toggle">
           <span class="menu-text"><%= i('html.label.sidebar.appset') %></span>
@@ -98,7 +98,7 @@
       </li>
       <% }%>
     <% }%>
-    <% if (user.type == 1) {%>
+    <% if (user.extend.type == 1) {%>
     <li>
         <a href="/customer/user" class="dropdown-toggle">
           <span class="menu-text"><%= i('html.label.sidebar.system.customer.user') %></span>
@@ -152,7 +152,7 @@
     </li>
     <% }%>
 
-    <% if (user.type == 2) {%>
+    <% if (user.extend.type == 2) {%>
     <li>
       <a href="#" class="dropdown-toggle">
         <span class="menu-text"><%= i('html.label.sidebar.da.system') %></span>
@@ -189,7 +189,7 @@
     </li>
     <% }%>
 
-    <% if (user.type == 3) {%>
+    <% if (user.extend.type == 3) {%>
     <li>
       <a href="#">
         <span class="menu-text"><%= i('html.label.sidebar.content') %></span>
