解决content_material,多国语出错问题

--- a/views/content_material.html
+++ b/views/content_material.html
@@ -7,6 +7,11 @@
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
   <script type="text/javascript" src="/javascripts/common.tag.view.js"></script>
   <script type="text/javascript" src="/javascripts/content_material.js"></script>
+  <script type="text/javascript">
+      var i18n = {
+          "js.common.search.error": "<%=i('js.common.search.error') %>"
+      }
+  </script>
 </head>
 <body>
 
