--- a/views/content_material.html
+++ b/views/content_material.html
@@ -10,6 +10,11 @@
   <script type="text/javascript">
       var i18n = {
           "js.common.search.error": "<%=i('js.common.search.error') %>"
+          , "js.common.dialog.ok": "<%=i('js.common.dialog.ok') %>"
+          , "js.common.dialog.cancel": "<%=i('js.common.dialog.cancel') %>"
+          , "js.common.delete.confirm": "<%=i('js.common.delete.confirm') %>"
+          , "js.public.check.material.delete": "<%=i('js.public.check.material.delete') %>"
+          , "js.common.delete.success": "<%=i('js.common.delete.success') %>"
       }
   </script>
 </head>
