--- a/views/content_material.html
+++ b/views/content_material.html
@@ -15,6 +15,8 @@
           , "js.common.delete.confirm": "<%=i('js.common.delete.confirm') %>"
           , "js.public.check.material.delete": "<%=i('js.public.check.material.delete') %>"
           , "js.common.delete.success": "<%=i('js.common.delete.success') %>"
+          , "js.common.replace.error": "<%=i('js.common.replace.error') %>"
+          , "js.common.replace.success": "<%=i('js.common.replace.success') %>"
       }
   </script>
 </head>
