素材，编辑filename问题

--- a/views/content_material.html
+++ b/views/content_material.html
@@ -17,6 +17,8 @@
           , "js.common.delete.success": "<%=i('js.common.delete.success') %>"
           , "js.common.replace.error": "<%=i('js.common.replace.error') %>"
           , "js.common.replace.success": "<%=i('js.common.replace.success') %>"
+          , "js.common.update.error": "<%=i('js.common.update.error') %>"
+          , "js.common.update.success": "<%=i('js.common.update.success') %>"
       }
   </script>
 </head>
