--- a/views/admin_company_list.html
+++ b/views/admin_company_list.html
@@ -7,6 +7,11 @@
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
 
   <script type="text/javascript" src="/javascripts/admin_company_list.js"></script>
+    <script type="text/javascript">
+        var i18n = {
+            "js.common.search.error": "<%=i('js.common.search.error') %>"
+        }
+    </script>
 
 </head>
 <body>
