客户信息编辑

--- a/views/admin_company_update.html
+++ b/views/admin_company_update.html
@@ -6,6 +6,20 @@
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
 
   <script type="text/javascript" src="/javascripts/admin_company_update.js"></script>
+    <script type="text/javascript">
+        var i18n = {
+            "js.common.search.error": "<%=i('js.common.search.error') %>"
+            , "js.common.dialog.ok": "<%=i('js.common.dialog.ok') %>"
+            , "js.common.dialog.cancel": "<%=i('js.common.dialog.cancel') %>"
+            , "js.common.delete.confirm": "<%=i('js.common.delete.confirm') %>"
+            , "js.public.check.material.delete": "<%=i('js.public.check.material.delete') %>"
+            , "js.common.delete.success": "<%=i('js.common.delete.success') %>"
+            , "js.common.replace.error": "<%=i('js.common.replace.error') %>"
+            , "js.common.replace.success": "<%=i('js.common.replace.success') %>"
+            , "js.common.update.error": "<%=i('js.common.update.error') %>"
+            , "js.common.update.success": "<%=i('js.common.update.success') %>"
+        }
+    </script>
 
 </head>
 <body>
