修正编辑用户type丢失的问题 修正用户类型判断的函数

--- a/views/admin_user_update.html
+++ b/views/admin_user_update.html
@@ -123,6 +123,7 @@
               </div>
             </div>
           </div>
+          <input style="display: none" class="form-control" id="inputType">
         </form>
       </div>
       <div class="col-lg-8" style="margin-bottom: 30px;padding: 0px;">
