--- a/views/admin_user_list.html
+++ b/views/admin_user_list.html
@@ -6,7 +6,12 @@
   <link href="<%= dynamic('/stylesheets/yukari.css')%>" rel="stylesheet" media="screen">
 
   <script type="text/javascript" src="<%= dynamic('/javascripts/admin_user_list.js')%>"></script>
-
+  <script type="text/javascript">
+    var i18n = {
+      "js.common.search.error"    : "<%=i('js.common.search.error') %>"
+      , "js.common.update.error"  : "<%=i('js.common.update.error') %>"
+    }
+  </script>
 </head>
 <body>
 
