组的增加，一览，搜索，和编辑

--- a/views/customer_group_update.html
+++ b/views/customer_group_update.html
@@ -6,6 +6,14 @@
   <link href="<%= dynamic('/stylesheets/yukari.css')%>" rel="stylesheet" media="screen">
   <script type="text/javascript" src="<%= dynamic('/javascripts/common.user.view.js')%>"></script>
   <script type="text/javascript" src="<%= dynamic('/javascripts/customer_group_update.js')%>"></script>
+    <script type="text/javascript">
+        var i18n = {
+            "js.common.search.error": "<%=i('js.common.search.error') %>"
+            , "js.common.add.error": "<%=i('js.common.add.error') %>"
+            , "js.common.update.error": "<%=i('js.common.update.error') %>"
+            , "js.ctr.common.system.error": "<%=i('js.ctr.common.system.error') %>"
+        }
+    </script>
 </head>
 <body>
 <input type="hidden" id="groupId" name="groupId" value="<%= groupId %>">
