--- a/views/customer_group_list.html
+++ b/views/customer_group_list.html
@@ -6,7 +6,13 @@
   <link href="<%= dynamic('/stylesheets/yukari.css')%>" rel="stylesheet" media="screen">
 
   <script type="text/javascript" src="<%= dynamic('/javascripts/customer_group_list.js')%>"></script>
-
+    <script type="text/javascript">
+        var i18n = {
+            "js.common.search.error": "<%=i('js.common.search.error') %>"
+            , "js.common.list.empty": "<%=i('js.common.list.empty') %>"
+            , "js.common.update.error": "<%=i('js.common.update.error') %>"
+        }
+    </script>
 </head>
 <body>
 
