--- a/views/admin_company_update.html
+++ b/views/admin_company_update.html
@@ -9,6 +9,7 @@
     <script type="text/javascript">
         var i18n = {
             "js.common.search.error": "<%=i('js.common.search.error') %>"
+            , "js.common.add.error": "<%=i('js.common.add.error') %>"
             , "js.common.update.error": "<%=i('js.common.update.error') %>"
             , "js.common.dialog.ok": "<%=i('js.common.dialog.ok') %>"
             , "js.common.dialog.cancel": "<%=i('js.common.dialog.cancel') %>"
