APP工作站的增删改查OK，遗留问题，小图片无法显示

--- a/views/customer_workstation.html
+++ b/views/customer_workstation.html
@@ -5,7 +5,24 @@
   <% include common/required.html %>
   <link href="<%= dynamic('/stylesheets/yukari.css')%>" rel="stylesheet" media="screen">
   <script type="text/javascript" src="<%= dynamic('/javascripts/common.user.view.js')%>"></script>
-  <script type="text/javascript" src="<%= dynamic('/javascripts/customer_workstatio')%>"></script>ipt>
+  <script type="text/javascript" src="<%= dynamic('/javascripts/customer_workstation.js')%>"></script>
+    <script type="text/javascript">
+        var i18n = {
+              "js.common.list.empty"    : "<%=i('js.common.list.empty') %>"
+            , "js.common.access.check"  : "<%=i('js.common.access.check') %>"
+            , "js.common.dialog.ok"  : "<%=i('js.common.dialog.ok') %>"
+            , "js.common.dialog.cancel"  : "<%=i('js.common.dialog.cancel') %>"
+            , "js.common.delete.confirm"  : "<%=i('js.common.delete.confirm') %>"
+            , "js.common.save.error"  : "<%=i('js.common.save.error') %>"
+            , "js.common.delete.success"  : "<%=i('js.common.delete.success') %>"
+            , "js.common.save.error"  : "<%=i('js.common.save.error') %>"
+            , "js.common.save.success"  : "<%=i('js.common.save.success') %>"
+            , "js.public.check.workstation.add"  : "<%=i('js.public.check.workstation.add') %>"
+            , "js.common.access.check"  : "<%=i('js.common.access.check') %>"
+            , "js.common.access.check"  : "<%=i('js.common.access.check') %>"
+            , "js.common.access.check"  : "<%=i('js.common.access.check') %>"
+        }
+    </script>
 </head>
 <body>
 
