--- a/views/customer_appimage.html
+++ b/views/customer_appimage.html
@@ -25,6 +25,14 @@
       top: 2px;float: left;left: 52px;position: absolute;
     }
   </style>
+    <script type="text/javascript">
+        var i18n = {
+            "js.common.update.error"    : "<%=i('js.common.update.error') %>"
+            , "js.common.update.success"  : "<%=i('js.common.update.success') %>"
+            , "js.common.upload.error"  : "<%=i('js.common.upload.error') %>"
+            , "js.common.upload.success"  : "<%=i('js.common.upload.success') %>"
+        }
+    </script>
 </head>
 <body>
 
